--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <title>Document</title>
 </head>
 <body>
-
+  <div class="thunder">
+    <ul>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+      <li><a href=""><img src="" alt=""></a></li>
+    </ul>
+  </div>
 </body>
 </html>
